--- a/style.css
+++ b/style.css
@@ -25,14 +25,6 @@
 }
 
 body {
-  /*
-  background-image: url(./assets/bg-mobile-dark.jpg);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
-  */
-
-  /*Tudo numa só (atalho)*/
   background: var(--bg-url) no-repeat top center/cover;
   height: 100vh;
 }
@@ -42,14 +34,14 @@ body * {
   color: var(--text-color);
 }
 
-#Container {
+#container {
   width: 100%;
   max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
 
-/* Profile */
+/* profile */
 #profile {
   text-align: center;
   padding: 24px;
@@ -62,10 +54,10 @@ body * {
 #profile p {
   font-weight: 500;
   line-height: 24px;
-  padding: 8px;
+  margin-top: 8px;
 }
 
-/* Switch */
+/* switch */
 #switch {
   position: relative;
   width: 64px;
@@ -93,7 +85,7 @@ body * {
   animation: slide-in 0.2s forwards;
 }
 
-#switch button hover {
+#switch button:hover {
   outline: 8px solid var(--highlight-color);
 }
 
@@ -103,18 +95,19 @@ body * {
   height: 24px;
   background: var(--surface-color);
   border: 1px solid var(--stroke-color);
-  backdrop-filter: bluer(4px);
-  -webkit-backdrop-filter: bluer(4px);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
   border-radius: 9999px;
 }
 
-/* Links - Listas */
+/* links */
 ul {
   list-style: none;
 
   display: flex;
   flex-direction: column;
   gap: 16px;
+
   padding: 24px 0;
 }
 
@@ -129,8 +122,8 @@ ul li a {
   border: 1px solid var(--stroke-color);
   border-radius: 8px;
 
-  backdrop-filter: bluer(4px);
-  -webkit-backdrop-filter: bluer(4px);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
 
   text-decoration: none;
   font-weight: 500;
@@ -138,17 +131,19 @@ ul li a {
   transition: background 0.2s;
 }
 
-/* pseudo-selector*/
+/* pseudo-selector */
 ul li a:hover {
   background: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
 }
 
+/* social links */
 #social-links {
   display: flex;
   justify-content: center;
 
   padding: 24px 0;
+
   font-size: 24px;
 }
 
@@ -172,7 +167,7 @@ footer {
   font-size: 14px;
 }
 
-/*Media queries*/
+/* media queries */
 @media (min-width: 700px) {
   :root {
     --bg-url: url(./assets/bg-desktop-dark.jpg);
